added stages 2-4 to the code

--- a/main.html
+++ b/main.html
@@ -13,11 +13,17 @@
         <button class="button button-positive" onclick="register()">
           Register Here
         </button>
-        <button class="button button-positive" onclick="getString()">
-          Get String
+        <button class="button button-positive" onclick="getReverse()">
+          Reverse
         </button>
-        <button class="button button-positive" onclick="findNeedle()">
-          Needle
+        <button class="button button-positive" onclick="getNeedleAndHaystack()">
+          Needle and Haystack
+        </button>
+        <button class="button button-positive" onclick="getPrefix()">
+          Prefix
+        </button>
+        <button class="button button-positive" onclick="getDateStamp()">
+          Dates
         </button>
       </div>
     </ion-content>
