Adding stage 5 as well as moment and moment js

--- a/main.html
+++ b/main.html
@@ -5,6 +5,8 @@
     <title>Josue Guzman Code 2040</title>
     <script src="jquery-3.1.1.min.js"></script>
     <script src="request.js"></script>
+    <script src="moment.js"></script>
+    <script src="moment-timezone.js"></script>
     <link href="ionic.min.css" rel="stylesheet">
   </head>
   <body>
